# Habr-Article-Explorer

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  database.py  main.py
backend/articles/: __init__.py  router.py  service.py
backend/auth/: models.py  router.py  schemas.py  service.py
backend/core/: __init__.py  config.py
backend/favorites/: models.py  router.py  service.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: StatsPage.jsx
parser/: habr_articles.db  habr_articles.db-journal  habr_articles.json
parser/parser/: items.py  middlewares.py  pipelines.py  settings.py
parser/parser/spiders/: habr_spider.py
